--- a/src/app/product-item/product-item.component.html
+++ b/src/app/product-item/product-item.component.html
@@ -1,8 +1,19 @@
-<div class="card" style="width: 18rem;">
+<div class="card product-card" routerLink="">
     <img class="card-img-top" src="{{ product.url }}" alt="Card image cap">
     <div class="card-body">
       <h5 class="card-title">{{ product.name }}</h5>
       <p class="card-text">{{ product.description }}</p>
-      <button class="btn btn-primary">Add to cart</button>
+      <div class="d-flex flex-column gap-1">
+        <select class="form-select" aria-label="Select quantity">
+          <option value="1">1</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="1">4</option>
+          <option value="2">5</option>
+          <option value="3">6</option>
+        </select>
+        <button class="btn btn-primary">Add to cart</button>
+      </div>
+      
     </div>
   </div>
