--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,3 +1,5 @@
-<div class="container">
-    <app-product-item *ngFor="let product of productList" [product]="product"></app-product-item>
+<div id="container" class="container">
+    <div class="row row-cols-1 row-cols-md-3 g-4">
+        <app-product-item *ngFor="let product of productList" [product]="product" class="col"></app-product-item>
+    </div>
 </div>
