--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -1,1 +1,20 @@
-<p>product-details works!</p>
+<div class="container product-details-container">
+    <div class="row">
+        <div class="col-md-6">
+            <img src="{{ product.url }}" class="img-fluid rounded" alt="...">
+        </div>
+        <div class="col-md-6">
+            <div class="d-flex flex-column gap-2">
+                <h1>{{ product.name }}</h1>
+                <h5>${{ product.price }}</h5>
+                <p>{{ product.description }}</p>
+                <div class="product-quantity-container">
+                    <app-product-quantity [product]="product"></app-product-quantity>
+                </div>
+                <a routerLink="/" class="product-list-link align-middle">
+                    <i class="bi bi-arrow-left-short"></i> Back to product list
+                </a>
+            </div>
+        </div>
+    </div>
+</div>
