--- a/src/app/product-item/product-item.component.html
+++ b/src/app/product-item/product-item.component.html
@@ -1,19 +1,8 @@
-<div class="card product-card" routerLink="">
+<div class="card product-card" routerLink="/products/{{product.id}}">
     <img class="card-img-top" src="{{ product.url }}" alt="Card image cap">
     <div class="card-body">
       <h5 class="card-title">{{ product.name }}</h5>
       <p class="card-text">{{ product.description }}</p>
-      <div class="d-flex flex-column gap-1">
-        <select class="form-select" aria-label="Select quantity">
-          <option value="1">1</option>
-          <option value="2">2</option>
-          <option value="3">3</option>
-          <option value="1">4</option>
-          <option value="2">5</option>
-          <option value="3">6</option>
-        </select>
-        <button class="btn btn-primary">Add to cart</button>
-      </div>
-      
+      <app-product-quantity [product]="product"></app-product-quantity>
     </div>
   </div>
