--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,1 +1,9 @@
-<p>cart works!</p>
+<div class="container cart-container ">
+    <div class="row">
+        <div class="col-md-6">
+            <app-cart-item *ngFor="let item of cart"></app-cart-item>
+        </div>
+        <div class="col-md-6">
+        </div>
+    </div>
+</div>
