--- a/src/app/product-quantity/product-quantity.component.html
+++ b/src/app/product-quantity/product-quantity.component.html
@@ -1,11 +1,6 @@
 <div class="d-flex flex-column gap-1">
-    <select class="form-select" aria-label="Select quantity">
-        <option value="1">1</option>
-        <option value="2">2</option>
-        <option value="3">3</option>
-        <option value="1">4</option>
-        <option value="2">5</option>
-        <option value="3">6</option>
+    <select [(ngModel)]="selectedQuantity" class="form-select" aria-label="Select quantity">
+        <option *ngFor="let quantity of quantities" [ngValue]="quantity">{{ quantity }}</option>
     </select>
-    <button class="btn btn-primary">Add to cart</button>
+    <button class="btn btn-primary" (click)="addToCart()">Add to cart</button>
 </div>
