--- a/src/app/cart-item/cart-item.component.html
+++ b/src/app/cart-item/cart-item.component.html
@@ -1,8 +1,16 @@
-<div class="row">
-    <div class="col-sm-4">
-        <img src="{{ cartItem.product.url }}" class="img-fluid rounded" alt="...">
+<div class="d-flex gap-2">
+    <div class="d-flex w-25">
+        <img src="{{ cartItem.product.url }}" class="img-fluid rounded" alt="{{cartItem.product.name}}">
     </div>
-    <div class="col-sm-8">
-        
+    <div class="flex-fill d-flex flex-column gap-2 justify-content-center">
+        <h6>{{ cartItem.product.name }}</h6>
+        <p>${{ cartItem.product.price }}</p>
+        <div class="d-flex gap-3">
+            <label>Amount:</label>
+            <input min="1" type="number" class="w-25" [(ngModel)]="cartItem.quantity" (ngModelChange)="amountChanged.emit(cartItem)"/>
+        </div>
+        <div class="d-flex gap-0 remove-item-btn-container">
+            <button type="button" class="btn btn-link" (click)="removed.emit(cartItem)">Remove</button>
+        </div>
     </div>
 </div>
