--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,9 +1,33 @@
 <div class="container cart-container ">
-    <div class="row">
-        <div class="col-md-6">
-            <app-cart-item *ngFor="let item of cart"></app-cart-item>
+
+    <!-- If cart is empty, show error feedback -->
+    <div class="text-center bg-light rounded p-5 mb-3" *ngIf="cart.length === 0">
+        <h3>😕</h3> 
+        Your cart is empty
+    </div>
+
+    <!-- If cart is not empty, show form -->
+    <div *ngIf="cart.length != 0" class="row">
+        <div class="col-md-6 d-flex flex-column gap-5">
+            <app-cart-item *ngFor="let item of cart" [cartItem]="item" (amountChanged)="onAmountChange(item)" (removed)="onRemove(item)"></app-cart-item>
+            <h2>Total: {{ prettyPaymentTotal }}</h2>
         </div>
         <div class="col-md-6">
+            <form #form="ngForm" (ngSubmit)="onSubmit()">
+                <h1>Check out</h1>
+                <br>
+                <label for="fullName" class="form-label">Full name</label>
+                <input type="text" required class="form-control" id="fullName" />
+                <br> 
+                <label for="address" class="form-label">Address</label>
+                <input type="text" required class="form-control" id="address" />
+                <br>
+                <label for="creditCard" class="form-label">Credit card</label>
+                <input type="number" required class="form-control" id="creditCard" />
+                <p class="credit-card-note">We'll never share your payment details with anyone</p>
+                <br>
+                <input class="btn btn-primary"  type="submit" value="Submit" [disabled]="form.invalid" />
+            </form>
         </div>
     </div>
 </div>
