--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -1,7 +1,7 @@
 <div class="container product-details-container">
     <div class="row">
         <div class="col-md-6">
-            <img src="{{ product.url }}" class="img-fluid rounded" alt="...">
+            <img src="{{ product.url }}" class="img-fluid rounded" alt="{{ product.name }}">
         </div>
         <div class="col-md-6">
             <div class="d-flex flex-column justify-content-center h-100">
