--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,10 +1,11 @@
 <div class="container cart-container ">
 
     <!-- If cart is empty, show error feedback -->
-    <div class="text-center bg-light rounded p-5 mb-3" *ngIf="cart.length === 0">
-        <h3>😕</h3> 
-        Your cart is empty
-    </div>
+    <app-message-box message="Your cart is empty"
+                     emoji="😕"
+                     *ngIf="cart.length === 0"
+                     >
+    </app-message-box>
 
     <!-- If cart is not empty, show form -->
     <div *ngIf="cart.length != 0" class="row">
@@ -14,20 +15,33 @@
         </div>
         <div class="col-md-6">
             <form #form="ngForm" (ngSubmit)="onSubmit()">
-                <h1>Check out</h1>
+                <h1>Checkout</h1>
                 <br>
                 <label for="fullName" class="form-label">Full name</label>
-                <input type="text" required class="form-control" id="fullName" />
+                <input name="fullName" type="text" required minlength="5" class="form-control" id="fullName" [(ngModel)]="fullName" />
                 <br> 
                 <label for="address" class="form-label">Address</label>
-                <input type="text" required class="form-control" id="address" />
+                <input name="address" type="text" required minlength="10" class="form-control" id="address" [(ngModel)]="address" />
                 <br>
                 <label for="creditCard" class="form-label">Credit card</label>
-                <input type="number" required class="form-control" id="creditCard" />
+                <input name="creditCard" 
+                       type="text" 
+                       required 
+                       minlength="16" 
+                       inputmode="numeric"
+                       pattern="[0-9\s]{13,19}"
+                       autocomplete="cc-number"
+                       placeholder="xxxx xxxx xxxx xxxx"
+                       class="form-control" 
+                       id="creditCard" 
+                       [(ngModel)]="creditCard" 
+                    />
                 <p class="credit-card-note">We'll never share your payment details with anyone</p>
                 <br>
                 <input class="btn btn-primary"  type="submit" value="Submit" [disabled]="form.invalid" />
             </form>
         </div>
     </div>
+
+    <br><br>
 </div>
